# cmt-rust

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: config.rs  env.rs  git_config.rs  main.rs  pkg_config.rs  pkgm.rs  util.rs
src/config/: app.rs  app_config.rs  base.rs  config.rs  config_reader.rs  config_settings.rs  config_track.rs  config_util.rs  env.rs  env_config.rs  mod.rs  package_manager.rs  pkg.rs  pkgm.rs  pkgm_config.rs  string_accessable.rs
src/config/cli/: config_cli.rs  config_cli_command.rs  config_params_init.rs  config_params_open.rs  config_params_update.rs  mod.rs
src/config/params/: config_params_init.rs  config_params_update.rs
src/config/pojo/: base_config.rs  env_config.rs  link_config.rs  local_config.rs  mod.rs  pkg_config.rs  system_config.rs  system_env_config.rs  system_package_config.rs
src/env/: env.rs  env_copy.rs  env_dir.rs  env_path.rs  mod.rs
src/env/cli/: env_cli.rs  env_cli_command.rs  env_params_add_remove.rs  env_params_config_list.rs  env_params_list.rs  mod.rs
src/env/params/: env_params_add.rs  env_params_add_remove.rs  env_params_config_add_remove.rs  env_params_config_list.rs  env_params_remove.rs  mod.rs
src/pkg/: mod.rs  pkg.rs  pkgm.rs
src/pkg/cli/: mod.rs  pkg_cli.rs  pkg_cli_command.rs  pkg_params_install_remove.rs
src/pkg/dnf/: dnf.rs  dnf_config_manager.rs  mod.rs
src/pkg/pacman/: mod.rs  (+1 more)
src/pkgm/: dnf.rs  pacman.rs  pkgm.rs  pkgm_command.rs  yay.rs
src/settings/: base_settings.rs  mod.rs
src/util/: command_line.rs  confy_util.rs  exec.rs  mod.rs  path_util.rs  vec_util.rs
(+24 files in other folders)
