[package]
name = "cmt"
version = "0.1.0"
license = ""
description = "Configuration Management Tool"
homepage = "https://github.com/Setre14/cmt-rust"
documentation = "https://github.com/Setre14/cmt-rust"
repository = "https://github.com/Setre14/cmt-rust"
readme = "https://github.com/Setre14/cmt-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
dirs = "5.0.1"
fs_extra = "1.3.0"
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.5.4"
# strum = "0.25.0"
strum_macros = "0.25"
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

